welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: not found: value faireMG
override def run() { faireMG()
                     ^PatternPicture:13: error: not found: value reucle
  reucle()
  ^